--- a/index.html
+++ b/index.html
@@ -16,17 +16,8 @@
   </div>
 </nav>
 
-<div class="right-overlay" id="rightOverlay">
-  <div class="close-overlay" onclick="toggleRightOverlay()">
-    &times;
-  </div>
-  <ul>
-    <li><a href="#contact-us">Contact Us</a></li>
-  </ul>
-</div>
-
   <div class="container">
-    <a class="key" href="main.html" target="_blank">Generate User Agent</a>
+    <a class="key" href="main.html" >Generate User Agent</a>
     <a class="key" href="https://t.me/best_technicals" target="_blank">How To Use</a>
     <a class="key" href="https://t.me/best_technicals" target="_blank">Join Telegram Channel</a>
     <a class="key" href="https://facebook.com/groups/892925915357288/" target="_blank">Join Facebook Group</a>
@@ -53,6 +44,15 @@
   <footer>
     <p>&copy; 2024 Best Technicals</p>
   </footer>
+
+<div class="right-overlay" id="rightOverlay">
+  <div class="close-overlay" onclick="toggleRightOverlay()">
+    &times;
+  </div>
+  <ul>
+    <li><a href="#contact-us">Contact Us</a></li>
+  </ul>
+</div>
 
 <script>
   function toggleRightOverlay() {
