--- a/indexEN.html
+++ b/indexEN.html
@@ -106,7 +106,7 @@
     <div class="container">
         <div class="form-container">
             <div class="image-pi"><img src="logo.webp"></img><h3>Hamster Price Calculator<h3></div>
-            <div class="nerkh-pi"><img src="totalEN.png"></img><input type="number" id="number-input" placeholder="Enter your $HMSTR token amount" inputmode="numeric" pattern="[0-9]*"></div>
+            <div class="nerkh-pi"><img src="totalEN.webp"></img><input type="number" id="number-input" placeholder="Enter your $HMSTR token amount" inputmode="numeric" pattern="[0-9]*"></div>
             <div class="calculate"><button style="box-shadow: 0 0 6px rgba(0, 0, 0, 0.2); " onclick=calculateRate()>Calculate</button></div>
             <div class="logs"></div>
             <div style="text-align: center; margin-top: 30px; margin-bottom: 20px;">
