--- a/indexEN.html
+++ b/indexEN.html
@@ -109,9 +109,12 @@
             <div class="nerkh-pi"><img src="totalEN.webp"></img><input type="number" id="number-input" placeholder="Enter your $HMSTR token amount" inputmode="numeric" pattern="[0-9]*"></div>
             <div class="calculate"><button style="box-shadow: 0 0 6px rgba(0, 0, 0, 0.2); " onclick=calculateRate()>Calculate</button></div>
             <div class="logs"></div>
-            <div style="text-align: center; margin-top: 30px; margin-bottom: 20px;">
+            <div style="text-align: center; margin-top: 30px; margin-bottom: 0px;">
             <button style="background-color: #fff; color: black; box-shadow: 0 0 6px rgba(0, 0, 0, 0.2); width: 130px; height:60px; margin: 5px 5px 5px 5px; cursor: none; font-size: 18px; font-weight: 500;" onclick="this.style.backgroundColor = '#ddd'; setTimeout(function(){ this.style.backgroundColor = '#fff'; }.bind(this), 500); location.href='https://t.me/best_technicals'">Developer Channel</button>
             <button style="background-color: #fff; color: black; box-shadow: 0 0 6px rgba(0, 0, 0, 0.2); width: 130px; height:60px; margin: 5px 5px 5px 5px; cursor: none; font-size: 18px; font-weight: 500;" onclick="this.style.backgroundColor = '#ddd'; setTimeout(function(){ this.style.backgroundColor = '#fff'; }.bind(this), 500); location.href='https://t.me/HamesterG'">AirDrop Channel</button>
+            </div>
+            <div style="text-align: center; margin-top: 5px; margin-bottom: 20px;">
+            <button style="background-color: #fff; color: black; box-shadow: 0 0 6px rgba(0, 0, 0, 0.2); width: 180px; height:60px; margin: 5px 5px 5px 5px; cursor: none; font-size: 22px; font-weight: 500;" onclick="this.style.backgroundColor = '#ddd'; setTimeout(function(){ this.style.backgroundColor = '#fff'; }.bind(this), 500); location.href='https://technicalzahid.github.io/indexFA.html'">نسخه فارسی</button>
             </div>
         </div>
     </div>
