--- a/indexFA.html
+++ b/indexFA.html
@@ -106,12 +106,15 @@
     <div class="container">
         <div class="form-container">
             <div class="image-pi"><img src="logo.webp"></img><h3>محاسبه نرخ توکن همستر<h3></div>
-            <div class="nerkh-pi"><img src="total.png"></img><input type="number" id="number-input" placeholder="مقدار توکن را اینجا وارد کنید" inputmode="numeric" pattern="[0-9]*"></div>
+            <div class="nerkh-pi"><img src="total.webp"></img><input type="number" id="number-input" placeholder="مقدار توکن را اینجا وارد کنید" inputmode="numeric" pattern="[0-9]*"></div>
             <div class="calculate"><button style="box-shadow: 0 0 6px rgba(0, 0, 0, 0.2); " onclick=calculateRate()>محاسبه</button></div>
             <div class="logs"></div>
-            <div style="text-align: center; margin-top: 30px; margin-bottom: 20px;">
+            <div style="text-align: center; margin-top: 30px; margin-bottom: 0px;">
             <button style="background-color: #fff; color: black; box-shadow: 0 0 6px rgba(0, 0, 0, 0.2); width: 130px; height:60px; margin: 5px 5px 5px 5px; cursor: none;" onclick="this.style.backgroundColor = '#ddd'; setTimeout(function(){ this.style.backgroundColor = '#fff'; }.bind(this), 500); location.href='https://t.me/best_technicals'">کانال سازنده</button>
             <button style="background-color: #fff; color: black; box-shadow: 0 0 6px rgba(0, 0, 0, 0.2); width: 130px; height:60px; margin: 5px 5px 5px 5px; cursor: none;" onclick="this.style.backgroundColor = '#ddd'; setTimeout(function(){ this.style.backgroundColor = '#fff'; }.bind(this), 500); location.href='https://t.me/HamesterG'">کانال ایردراپ</button>
+            </div>
+            <div style="text-align: center; margin-top: 5px; margin-bottom: 20px;">
+            <button style="background-color: #fff; color: black; box-shadow: 0 0 6px rgba(0, 0, 0, 0.2); width: 180px; height:60px; margin: 5px 5px 5px 5px; cursor: none; font-size: 18px; font-weight: 500;" onclick="this.style.backgroundColor = '#ddd'; setTimeout(function(){ this.style.backgroundColor = '#fff'; }.bind(this), 500); location.href='https://technicalzahid.github.io/indexEN.html'">English Version</button>
             </div>
         </div>
     </div>
