--- a/indexFA.html
+++ b/indexFA.html
@@ -111,7 +111,7 @@
             <div class="logs"></div>
             <div style="text-align: center; margin-top: 30px; margin-bottom: 0px;">
             <button style="background-color: #fff; color: black; box-shadow: 0 0 6px rgba(0, 0, 0, 0.2); width: 130px; height:60px; margin: 5px 5px 5px 5px; cursor: none;" onclick="this.style.backgroundColor = '#ddd'; setTimeout(function(){ this.style.backgroundColor = '#fff'; }.bind(this), 500); location.href='https://t.me/best_technicals'">کانال سازنده</button>
-            <button style="background-color: #fff; color: black; box-shadow: 0 0 6px rgba(0, 0, 0, 0.2); width: 130px; height:60px; margin: 5px 5px 5px 5px; cursor: none;" onclick="this.style.backgroundColor = '#ddd'; setTimeout(function(){ this.style.backgroundColor = '#fff'; }.bind(this), 500); location.href='https://t.me/HamesterG'">کانال ایردراپ</button>
+            <button style="background-color: #fff; color: black; box-shadow: 0 0 6px rgba(0, 0, 0, 0.2); width: 130px; height:60px; margin: 5px 5px 5px 5px; cursor: none;" onclick="this.style.backgroundColor = '#ddd'; setTimeout(function(){ this.style.backgroundColor = '#fff'; }.bind(this), 500); location.href='https://t.me/irairdrupz'">کانال ایردراپ</button>
             </div>
             <div style="text-align: center; margin-top: 5px; margin-bottom: 20px;">
             <button style="background-color: #fff; color: black; box-shadow: 0 0 6px rgba(0, 0, 0, 0.2); width: 180px; height:60px; margin: 5px 5px 5px 5px; cursor: none; font-size: 18px; font-weight: 500;" onclick="this.style.backgroundColor = '#ddd'; setTimeout(function(){ this.style.backgroundColor = '#fff'; }.bind(this), 500); location.href='https://technicalzahid.github.io/indexEN.html'">English Version</button>
