--- a/index.html
+++ b/index.html
@@ -265,22 +265,17 @@
                 <option value="Cube" selected>Chain Cube 2048</option>
                 <option value="Train">Train Miner</option>
                 <option value="Merge">Merge Away</option>
-                <option value="Twerk">Twerk Race 3D</option>
                 <option value="Poly">Polysphere</option>
-                <option value="Trim">Mow and Trim</option>
                 <option value="Zoo">Zoopolis</option>
-                <option value="Tile">Tile Trio</option>
-                <option value="Fluf">Fluff Crusade</option>
                 <option value="Stone">Stone Age</option>
                 <option value="Bounc">Bouncemasters</option>
                 <option value="Hide">Hide Ball</option>
-                <option value="Pin">Pin Out Master</option>
                 <option value="Count">Count Masters</option>
                 <option value="Infct">Infected Frontier</option>
-                <option value="Water">Among Water</option>
                 <option value="Fctry">Factory World</option>
                 <option value="Snack">Snake Run</option>
                 <option value="Cook">Cooking Stories</option>
+                <option value="Tower">Tower Defence</option>
                 <option value="All">All Games Codes</option>
             </select>
             <label id="keyCountLabel" for="keyCount">Number of codes:</label>
@@ -342,11 +337,6 @@
                 promoId: '2aaf5aee-2cbc-47ec-8a3f-0962cc14bc71',
                 gentime: 7
             },
-            Twerk: {
-                appToken: '61308365-9d16-4040-8bb0-2f4a4c69074c',
-                promoId: '61308365-9d16-4040-8bb0-2f4a4c69074c',
-                gentime: 5
-            },
             Merge: {
                 appToken: '8d1cc2ad-e097-4b86-90ef-7a27e19fb833',
                 promoId: 'dc128d28-c45b-411c-98ff-ac7726fbaea4',
@@ -355,11 +345,6 @@
             Hide: {
                 appToken: '4bf4966c-4d22-439b-8ff2-dc5ebca1a600',
                 promoId: '4bf4966c-4d22-439b-8ff2-dc5ebca1a600',
-                gentime: 5
-            },
-            Trim: {
-                appToken: 'ef319a80-949a-492e-8ee0-424fb5fc20a6',
-                promoId: 'ef319a80-949a-492e-8ee0-424fb5fc20a6',
                 gentime: 5
             },
             Count: {
@@ -372,20 +357,10 @@
                 promoId: '04ebd6de-69b7-43d1-9c4b-04a6ca3305af',
                 gentime: 4
             },
-            Pin: {
-                appToken: 'd2378baf-d617-417a-9d99-d685824335f0',
-                promoId: 'd2378baf-d617-417a-9d99-d685824335f0',
-                gentime: 3
-            },
             Train: {
                 appToken: '82647f43-3f87-402d-88dd-09a90025313f',
                 promoId: 'c4480ac7-e178-4973-8061-9ed5b2e17954',
                 gentime: 2
-            },
-            Fluf: {
-                appToken: '112887b0-a8af-4eb2-ac63-d82df78283d9',
-                promoId: '112887b0-a8af-4eb2-ac63-d82df78283d9',
-                gentime: 3
             },
             Snack: {
                 appToken: 'c8e017e2-8817-4d02-bce6-b951e74bb18f',
@@ -397,10 +372,10 @@
                 promoId: 'ed526e8c-e6c8-40fd-b72a-9e78ff6a2054',
                 gentime: 3
             },
-            Tile: {
-                appToken: 'e68b39d2-4880-4a31-b3aa-0393e7df10c7',
-                promoId: 'e68b39d2-4880-4a31-b3aa-0393e7df10c7',
-                gentime: 2
+            Tower: {
+                appToken: '53bf823a-948c-48c4-8bd5-9c21903416df',
+                promoId: '53bf823a-948c-48c4-8bd5-9c21903416df',
+                gentime: 3
             },
             Cube: {
                 appToken: 'd1690a07-3780-4068-810f-9b5bbf2931b2',
@@ -420,11 +395,6 @@
             Infct: {
                 appToken: 'eb518c4b-e448-4065-9d33-06f3039f0fcb',
                 promoId: 'eb518c4b-e448-4065-9d33-06f3039f0fcb',
-                gentime: 2
-            },
-            Water: {
-                appToken: 'daab8f83-8ea2-4ad0-8dd5-d33363129640',
-                promoId: 'daab8f83-8ea2-4ad0-8dd5-d33363129640',
                 gentime: 2
             },
             Fctry: {
@@ -605,7 +575,7 @@
 
             const validKeys = keys.filter(key => key !== null);
             if (validKeys.length > 0) {
-                if (selectedApp === "All" && allKeys.length === 76) {
+                if (selectedApp === "All" && allKeys.length === 56) {
                         updateLoadingBar(100);
                         appendToDisplay("\nAll Codes Generated, Thanks for using");
                         copyDeleteButton.style.display = 'flex';
@@ -722,7 +692,7 @@
                 const intervalId = setInterval(async () => {
                     const appName = appNames[currentAppIndex];
                     console.log(`${appName}`);
-                    if (currentAppIndex == 19){
+                    if (currentAppIndex == 14){
                         clearInterval(intervalId);
                         return;
                     }
@@ -798,7 +768,7 @@
         
         async function startLoadingBar(genTimeMinutes) {
             const selectedApp = document.getElementById('appSelect').value;
-            const requiredKeys = selectedApp === "All" ? 76 : parseInt(document.getElementById('keyCount').value);
+            const requiredKeys = selectedApp === "All" ? 56 : parseInt(document.getElementById('keyCount').value);
             let progress = 0;
             let keyCount = 0;
             let i = 0;
@@ -855,6 +825,6 @@
         }
         document.addEventListener('DOMContentLoaded', displayStoredKeys)
     </script>
-    <div class="version">v1.3.9</div>
+    <div class="version">v1.4.0</div>
 </body>
 </html>
