--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@
             user_id = null;
             }
         if (window.Telegram && window.Telegram.WebApp.initDataUnsafe) {
-            if (user_id){
+            if (!user_id){
                 mainBody.style.display = 'none';
                 joinBody.style.display = 'none';
             }
