--- a/index.html
+++ b/index.html
@@ -828,6 +828,8 @@
                 // Handle different response cases
                 if (data.error) {
                     console.error('Error:', data.error);
+                    alert("id not found")
+                    alert(user_id)
                 } else if (data.status === false) {
                     mainBody.style.display = 'none';
                     joinBody.style.display = 'block';
@@ -855,7 +857,7 @@
         if (window.Telegram && window.Telegram.WebApp.initDataUnsafe) {
             if (!user_id){
                 mainBody.style.display = 'none';
-                joinBody.style.display = 'none';
+                joinBody.style.display = 'flex';
             }
             else {
                checkmember()
